<resources>
    <string name="app_name">chapter04_activity</string>
    <string name="jump_to_next">jump to next page with response</string>
    <!--

    这些 strings 是放在配置信息里面的， 因为， 假如你需要 更改的话， 你不需要 改动 java 代码，
    而是改动配置 文件中的 value 就行

    -->
    <string name="weather">this is from string.xml: 晴天</string>

    <string name="first_short">first</string>
    <string name="first_long">启停活动</string>
    <string name="second_short">second</string>
    <string name="second_long">来回跳转</string>
    <string name="third_short">third</string>
    <string name="third_long">登录返回</string>
</resources>